# software-engineering-project

./: README.md  pyproject.toml
architecture/: ReadMe.md
output/: data_log.csv
src/: camera.py  data_logger.py  image_processor.py  image_visualizer.py  integration.py  main.py  tempCodeRunnerFile.py
src/software_engineering_project_yan_tim/: camera.py  data_logger.py  image_processor.py  image_visualizer.py
